--- a/service-amc.html
+++ b/service-amc.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Annual Maintenance Contract Services - Nexora IT Solutions">
-    <title>AMC Services | Nexora IT Solutions</title>
+    <meta name="description" content="Annual Maintenance Contract Services - Devpixelite">
+    <title>AMC Services | Devpixelite</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -164,7 +164,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
                         </svg>
                     </div>
-                    <span class="font-poppins font-bold text-xl text-white">Nexora <span class="text-accent">IT</span></span>
+                    <span class="font-poppins font-bold text-xl text-white">Devpixelite <span class="text-accent">IT</span></span>
                 </a>
                 
                 <div class="hidden md:flex items-center gap-8">
@@ -363,7 +363,7 @@
     <footer class="bg-primary pt-16 pb-8 border-t border-gray-800">
         <div class="px-16 text-center">
             <p class="text-gray-500 text-sm">
-                © 2024 Nexora IT Solutions. All rights reserved.
+                © 2024 Devpixelite. All rights reserved.
             </p>
         </div>
     </footer>
